# chameleon

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  fuzz.yml  no-conflict-markers.yml  release.yaml  release.yml  schema-sync.yml
docs/: sync-schemas.md
docs/login/: launchd.md  systemd.md  zlogin.md
docs/plugins/: authoring.md
docs/schema/: neutral.schema.json
docs/superpowers/plans/: 2026-05-05-chameleon-v0.md
docs/superpowers/specs/: 2026-05-05-chameleon-design.md  2026-05-05-chameleon-scaffolding-design.md  2026-05-06-p3-authorization-design.md  2026-05-06-parity-gap.md  2026-05-06-resolution-memory.md  2026-05-06-smoke-findings.md
skills/: README.md
src/chameleon/: __init__.py  __main__.py  _types.py  cli.py
src/chameleon/codecs/: __init__.py  _path_policy.py  _protocol.py  _registry.py  _url.py
src/chameleon/codecs/claude/: __init__.py  _generated.py  authorization.py  capabilities.py  directives.py  environment.py  governance.py  identity.py  interface.py  lifecycle.py
src/chameleon/codecs/codex/: __init__.py  _generated.py  authorization.py  capabilities.py  directives.py  environment.py  governance.py  identity.py  interface.py  lifecycle.py
src/chameleon/io/: __init__.py  json.py  toml.py  yaml.py
src/chameleon/merge/: __init__.py  _diffs.py  changeset.py  conflict.py  drift.py  engine.py  resolutions.py  resolve.py
src/chameleon/schema/: __init__.py  _constants.py  authorization.py  capabilities.py  directives.py  environment.py  governance.py  identity.py  interface.py  lifecycle.py  neutral.py  passthrough.py  profiles.py
src/chameleon/state/: __init__.py  git.py  locks.py  notices.py  paths.py  transaction.py
src/chameleon/targets/: __init__.py  _protocol.py  _registry.py
src/chameleon/targets/claude/: __init__.py  assembler.py
src/chameleon/targets/codex/: __init__.py  assembler.py
tests/: test_smoke.py  test_typing_audit.py
tests/concurrency/: test_locks.py
tests/conflicts/: test_interactive_multi_conflict.py  test_interactive_resolve.py  test_interactive_target_specific.py  test_resolve.py
tests/fixtures/exemplar/: README.md  sanitize.py
tests/fixtures/exemplar/home/: _claude.json
tests/fixtures/exemplar/home/_claude/: CLAUDE.md  mcp-needs-auth-cache.json  mcp.json  policy-limits.json  settings.json  settings.local.json
tests/fixtures/exemplar/home/_codex/: config.toml
tests/fuzz/: README.md  __init__.py  conftest.py  strategies.py  test_cross_target_unification.py  test_engine_state_machine.py  test_passthrough_deep.py  test_per_codec_round_trip.py  test_smoke.py  test_unicode_broadside.py  test_wire_disassemble_never_crashes.py
tests/fuzz/corpus/: README.md
tests/golden/: example_neutral.yaml
tests/integration/: test_assembler_robustness.py  test_claude_assembler.py  test_cli_help.py  test_codex_assembler.py  test_diff_and_discard.py  test_exemplar_byte_roundtrip.py  test_exemplar_disassemble.py  test_exemplar_plugins_unification.py  test_exemplar_smoke.py  test_login_recipes.py  test_merge_dry_run.py  test_no_conflict_markers.py  test_passthrough_roundtrip.py  test_resolution_invalidation.py  test_resolution_memory.py  test_subtable_preservation.py  test_target_deletions.py  test_target_specific_resolution.py  test_unauthored_claims_preservation.py  test_v0_acceptance.py
tests/property/: test_authorization_lcd_schema.py  test_capabilities_marketplaces.py  test_capabilities_plugins.py  test_claude_authorization_codec.py  test_claude_capabilities_codec.py  test_claude_directives_aliases.py  test_claude_directives_codec.py  test_claude_environment_codec.py  test_claude_hooks_codec.py  test_claude_identity_codec.py  test_claude_mcp_cwd.py  test_claude_mcp_discriminator.py  test_claude_plugin_marketplace_filter.py  test_claude_section_15_slots.py  test_claude_stubs.py  test_claude_voice_object_codec.py  test_codex_authorization_codec.py  test_codex_capabilities_codec.py  test_codex_directives_codec.py  test_codex_environment_codec.py  test_codex_identity_codec.py  test_codex_identity_extras_codec.py  test_codex_marketplace_roundtrip.py  test_codex_mcp_cwd.py  test_codex_personality_codec.py  test_codex_reviewer_codec.py  test_codex_stubs.py  test_codex_trust_lossy.py  test_codex_wave10_15x_codecs.py  test_deferred_domains.py  test_enum_exhaustion.py  test_resolution_hash.py  test_resolutions_schema.py
tests/recovery/: test_transaction.py  test_transaction_recovery.py
tests/schema_drift/: test_claimed_paths.py
tests/static/: _field_walker.py  conftest.py  test_no_silent_upstream_drops.py
tests/unit/: test__types.py  test_capabilities_reconciler_ordering.py  test_changeset.py  test_codec_protocol.py  test_codec_registry.py  test_constants.py  test_engine_leaf_write_coercion.py  test_io_json.py  test_io_json_unicode.py  test_io_toml.py  test_io_yaml.py  test_notices.py  test_per_fieldpath_classification.py  test_schema_capabilities.py  test_schema_deferred.py  test_schema_directives.py  test_schema_environment.py  test_schema_identity.py  test_schema_neutral.py  test_schema_passthrough.py  test_schema_profiles.py  test_state_git.py  test_state_paths.py  test_target_registry.py  test_url.py
tools/: dump-schema.py  pre-commit-no-conflict-markers.sh
tools/sync-schemas/: __init__.py  pins.toml  sync.py
tools/sync-schemas/codex/: Cargo.toml
tools/sync-schemas/codex/src/: main.rs
tools/sync-schemas/upstream/: codex.schema.json
